--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,6 @@
 {
-  "short_name": "Chicken Shoot",
-  "name": "Chicken Shoot",
-  "icons": [
-    {
-      "src": "launcher-icon-2x.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-3x.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "launcher-icon-4x.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "short_name": "Chicken Fling",
+  "name": "Chicken Fling",
   "start_url": "/index.html",
   "display": "fullscren",
   "orientation": "landscape"
